Few css improvements

--- a/bullet-visualization/index.html
+++ b/bullet-visualization/index.html
@@ -13,6 +13,11 @@
                 line-height: 1.6em;
             }
             #draggable { width: 500px; height: 150px; padding: 0.5em; }
+            body
+            {
+                margin: 0;
+                overflow: hidden;
+            }
         </style>  
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css">      
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
